--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+form {
+    padding-left: 20px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .valid {
+    border-color: rgb(0, 0, 0);
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px; 
   }
-  to {
-    transform: rotate(360deg);
+  
+  .invalid {
+    border-color: rgb(0, 0, 0);
+    border-width:1px ;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px; 
+  
   }
-}
+  .Regcontainer{
+    display: flex;
+    height: 10000px;
+ 
+  }
+
+  
+
+  .container {
+    display: flex;
+    height: 100vh;
+  }
+  
+  .Regleft-side {
+    flex: 1;
+    background-color: #f8f8f8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    display: flex;
+    width: 200px;
+    height: 1200px;
+    background-image: url(../public/leftside.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .left-side {
+    flex: 1;
+    background-color: #f8f8f8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    display: flex;
+    width: 200px;
+    height: 1200px;
+    background-image: url(../public/leftside.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  
+  .Regleft-side {
+    flex: 1;
+    background-color: #f8f8f8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    display: flex;
+    height: 1200px;
+    width: 200px;
+    background-image: url(../public/Regleftside.jfif);
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+
+  .right-side {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .Regright-side {
+    
+    flex: 1;
+    display: flex;
+    justify-content:center;
+    align-items:start;
+  }
+
+  .pnav
+  {
+    margin: 0px;
+  }
+  
+  .back-button {
+    position: relative;
+    align-self: flex-start;
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    top: -410px;
+    
+  }
+  
+
+  
+  .login-form {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+  }
+  
+  .reginput
+  {
+
+  }
+
+  input {
+    
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #dfdede;
+    border-radius: 5px;
+  }
+  
+  .forgot-password {
+    display: flex;
+    text-align: right;
+    font-size: 14px;
+    color: blue;
+    text-decoration: none;
+    
+  }
+  
+  .checkbox-container {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+  }
+  
+  .submit-btn,
+  .register-btn {
+    margin-top: 10px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .submit-btn {
+    border-color: rgb(0, 0, 0);
+    border-width:1px ;
+    
+    margin-top: 10px 0;
+    margin-bottom: 0px 0;
+    padding: 10px;
+    border-radius: 5px; 
+  }
+  
+  .preg
+  {
+  padding:0px;
+  margin-bottom: 0px;
+  margin-top: 10px;
+  }
+  
+  .register-btn {
+    width: 300px;
+    border-color: rgb(0, 0, 0);
+    border-width:1px ;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: black;
+    color: #ddd6d6;
+    
+  
+  }
+  
